# serverlessd

./: Cargo.toml  LICENSE  README.md
src/: config.rs  io.serverlessd.varlink  main.rs  service.rs
src/providers/: cloudflare.rs  mod.rs
src/varlink/: io.serverlessd.varlink
