[package]
name = "serverlessd"
version = "0.1.0"
authors = ["Daniel McCrevan <danielmccrevan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
log = "0.4.8"
fern = "0.5.9"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0.41"
varlink = "10.0.0"
varlink_derive = "8.0.0"